--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "compression": "1.5.2",
     "cookie-parser": "1.3.5",
     "db-migrate": "0.9.20",
+    "ejs": "2.3.4",
     "express": "4.13.3",
     "http-status-codes": "1.0.5",
     "jwt-simple": "0.3.0",
     "massive": "2.0.6",
+    "mysql": "2.9.0",
     "path": "0.11.14",
     "winston": "1.0.1",
     "winston-loggly": "1.1.0"
