try to run on beanstack

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,15 @@ node_modules
 *.iml
 
 #aws stuff
-.elasticbeanstalk
+#.elasticbeanstalk
 
 .vagrant
+
+# Elastic Beanstalk Files
+
+.elasticbeanstalk/*
+
+!.elasticbeanstalk/*.cfg.yml
+
+!.elasticbeanstalk/*.global.yml
+
