--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ejs": "2.3.4",
     "express": "4.13.3",
+    "html": "0.0.10",
     "path": "0.11.14",
     "pg": "4.4.2"
   },
